--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "npm run build && node server.js",
     "dev": "parcel public/index.html --open --no-cache --port 3000",
-    "build": "parcel build public/index.html"
+    "build": "parcel build public/index.html --no-cache --no-source-maps"
   },
   "repository": {
     "type": "git",
