--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/ElPastel/middle.messenger.praktikum.yandex/issues"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "homepage": "https://github.com/ElPastel/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@parcel/transformer-inline-string": "^2.8.2",
