--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
         "noUnusedParameters": true,
         "module": "commonjs",
         "strictNullChecks": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "lib": [
+            "dom",
+            "es2018"
+        ],
     },
     "include": [
         "./src",
