--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/ElPastel/middle.messenger.praktikum.yandex/issues"
   },
   "engines": {
-    "node": "=12.0.0",
+    "node": ">=12.0.0",
     "browsers": ">= 50%"
   },
   "homepage": "https://github.com/ElPastel/middle.messenger.praktikum.yandex#readme",
