--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,13 @@
 {
-  "extends": ["@parcel/config-default"],
+  "extends": [
+    "@parcel/config-default"
+  ],
   "transformers": {
-    "*.pug": ["parcel-transformer-pug-precompile"]
+    "*.hbs": [
+      "@anikin/parcel-transformer-handlebars-precompile"
+    ],
+    "*.pug": [
+      "parcel-transformer-pug-precompile"
+    ]
   }
 }
