--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
   },
   "homepage": "https://github.com/ElPastel/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@parcel/transformer-inline-string": "^2.8.2",
-    "@parcel/transformer-pug": "^2.8.2",
-    "@parcel/transformer-sass": "^2.8.2",
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@parcel/transformer-inline-string": "^2.8.3",
+    "@parcel/transformer-pug": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "assert": "^2.0.0",
     "buffer": "^5.7.1",
     "eslint": "^8.32.0",
     "os-browserify": "^0.3.0",
-    "parcel": "^2.8.2",
+    "parcel": "^2.8.3",
     "parcel-transformer-pug-precompile": "^1.0.6",
     "path-browserify": "^1.0.1",
     "prettier": "^2.8.3",
@@ -50,6 +52,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "handlebars": "^4.7.7",
     "pug": "^3.0.2",
     "uuid": "^9.0.0"
   }
