--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "exclude": [
         "./node_modules",
         "./.parcel-cache",
-        "./dist"
+        "./dist",
+        "*.test.ts"
     ]
 }
