--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "start": "npm run build && node server.js",
-    "dev": "parcel public/index.html --open --no-cache --port 3000 --no-source-maps",
-    "build": "parcel build public/index.html --no-cache --no-source-maps",
+    "serve": "cross-env NODE_ENV=development webpack serve --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production",
     "style": "stylelint **/*.scss",
     "eslint": "eslint --ext .ts src/",
     "test": "jest"
@@ -21,7 +21,7 @@
   },
   "author": "",
   "license": "ISC",
-  "browserlist": "> 0.5%, last 2 versions, not dead",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "bugs": {
     "url": "https://github.com/ElPastel/middle.messenger.praktikum.yandex/issues"
   },
@@ -31,29 +31,52 @@
   },
   "homepage": "https://github.com/ElPastel/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@parcel/transformer-inline-string": "^2.8.3",
-    "@parcel/transformer-pug": "^2.8.3",
-    "@parcel/transformer-sass": "^2.8.3",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
     "@types/jest": "^29.4.0",
+    "@types/pug": "^2.0.6",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "assert": "^2.0.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "buffer": "^5.7.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.32.0",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
+    "image-minimizer-webpack-plugin": "^3.8.1",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
     "jest": "^27.0.0",
     "jest-environment-jsdom": "^27.0.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "os-browserify": "^0.3.0",
-    "parcel": "^2.8.3",
-    "parcel-transformer-pug-precompile": "^1.0.6",
     "path-browserify": "^1.0.1",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.3",
     "process": "^0.11.10",
-    "pug-jest": "^1.0.1",
+    "pug-plugin": "^4.9.6",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "stylelint": "^14.16.1",
     "stylelint-config-standard-scss": "^6.1.0",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.9.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "express": "^4.18.2",
