--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "style": "stylelint **/*.scss",
     "eslint": "eslint --ext .ts src/",
-    "test": "jest"
+    "test": "jest",
+    "precommit": "npm-run-all --parallel test eslint style"
   },
   "repository": {
     "type": "git",
@@ -50,6 +51,7 @@
     "eslint": "^8.32.0",
     "html-webpack-harddisk-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "image-minimizer-webpack-plugin": "^3.8.1",
     "imagemin": "^8.0.1",
