--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,7 @@
     "@typescript-eslint"
   ],
   "overrides": [],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
