--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "style": "stylelint **/*.scss",
     "eslint": "eslint --ext .ts src/",
     "test": "jest",
-    "precommit": "npm-run-all --parallel test eslint style"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^27.0.0",
     "@types/pug": "^2.0.6",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
